# agents_config

./: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  main.py  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/chatmodes/: specification.chatmode.md
.github/instructions/: python.instructions.md
.github/prompts/: create_ado_work_item_from_spec.prompt.md  create_spec.prompt.md  kv-env-mg.prompt.md
.github/workflows/: WORKFLOW.md  ci.yml  publish.yml  release.yml  version-bump.yml
app/agents_config/: __init__.py  agent_config.py  ai_config.py  base.py  config_loader.py  config_models.py  model_config.py  tool_config.py
app/ai-config/: ai-config.yaml
tests/: test_basic.py  test_model_references.py
