[project]
name = "agents-config"
version = "0.1.0"
description = "Robust Pydantic models for AI agent configuration with environment variable substitution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0.0", "PyYAML>=6.0.0", "typing-extensions>=4.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[tool.black]
line-length = 150
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 150

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
